--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 MONGODB_CONN_URI = mongodb+srv://myAtlasDBUser:root@myatlasclusteredu.6awkqhd.mongodb.net/FakeStoreAPI?retryWrites=true&w=majority&appName=myAtlasClusterEDU
+
+LOGIN_SECRET_KEY = sdltioljhwtsriohb@dliurkgh
