--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "joi": "^17.13.3",
     "joi-password": "^4.2.0",
     "joi-password-complexity": "^5.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
     "nodemon": "^3.1.7"
   }
